Enhance worst case cluster affinity testing in hudson and AR coverage
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@15872 bf0df8d0-2c1f-0410-b170-bd30377b63dc